# database-lib

./: .gitignore  Cargo.toml  db.sqlite
migrations/2021-05-14-074110_create_record/: up.sql
src/: lib.rs  models.rs  schema.rs
