[package]
name = "database-lib"
version = "0.1.0"
authors = ["Salva HG <salva.hg01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
chrono = "0.4.19"
libsqlite3-sys = { version = “^0”, features = [“bundled”] }
